mimir/ingress/nginx/base/mimir-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-ingress
  namespace: $(namespace)
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - $(MIMIR_DOMAINNAME)
    secretName: mimir-tls
  rules:
  - host: $(MIMIR_DOMAINNAME)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mimir-gateway
            port:
              number: 80
